plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.8'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.odd'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2"
	//csv 파일 읽기
	implementation 'com.opencsv:opencsv:5.7.1'
	// xls 엑셀 파일 읽기 쓰기
	implementation 'org.apache.poi:poi:5.2.3'
	// xlsx 엑셀 파일 읽기 쓰기
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-mybatis:2.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
}

tasks.named('test') {
	useJUnitPlatform()
}
